--- a/src/locale/ru/LC_MESSAGES/django.po
+++ b/src/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-28 06:55+0000\n"
+"POT-Creation-Date: 2022-03-28 07:22+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -423,8 +423,8 @@ msgid "Hi, I am"
 msgstr "Привет, я"
 
 #: templates/main/index.html:27
-msgid "Web Developer (Python/Django)"
-msgstr "Веб-разработчик (Python/Django)"
+msgid "Web Developer (Python/Django/Vue.js)"
+msgstr "Веб-разработчик (Python/Django/Vue.js)"
 
 #: templates/main/index.html:29
 msgid "About me"
