Update Home page

--- a/src/locale/ru/LC_MESSAGES/django.po
+++ b/src/locale/ru/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-03-28 07:22+0000\n"
+"POT-Creation-Date: 2022-04-16 13:06+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -492,11 +492,13 @@ msgstr "Мой опыт"
 
 #: templates/main/index.html:114
 msgid ""
-"In my practice there is a blog for DJs, a portal covering restaurant and "
-"club life, an online store, a social network of wedding photographers."
+"In my practice, there are sites of various kinds of activity: a blog, an "
+"online store, a social network, a business card site. I write standards-"
+"based code that is easy to maintain, cross-browser, and performant."
 msgstr ""
-"В моей практике есть блог для ди-джеев, портал о ресторанной и клубной "
-"жизни, интернет-магазин, социальная сеть свадебных фотографов."
+"В моей практике есть сайты разного рода деятельности: блог, интернет-"
+"магазин, социальная сеть, сайт-визитка. Я пишу код на основе стандартов, "
+"который является простым в обслуживании, кроссбраузерным и производительным."
 
 #: templates/main/index.html:116
 msgid "View Portfolio"
